<resources>
    <string name="add_exercise_action_bar_label">Add Exercise</string>
    <string name="add_name_label">Name</string>
    <string name="add_name_placeholder">Type a name…</string>
    <string name="add_workout_break_label">Break time in seconds</string>
    <string name="add_exercise_category_label">Category</string>
    <string name="add_button_label">Add</string>
    <string name="add_exercise_in_workout_exercise_label">Exercise</string>
    <string name="add_exercise_in_workout_sets_label">Sets</string>
    <string name="add_exercise_in_workout_repeats_label">Repeats</string>
    <string name="add_exercise_in_workout_button_label">Add exercise</string>
    <string name="fields_cannot_be_empty_message">Fields cannot be empty!</string>
    <string name="delete_label">Delete</string>
    <string name="choose_workout_label">Choose a workout</string>
    <string name="start_workout_button_label">Start</string>
    <string name="exercise_finished_button_label">Finished</string>
    <string name="break_text">Break</string>
    <string name="skip_break_text">Skip</string>
    <string name="add_workout_action_bar_label">Add Workout</string>
    <string name="main_action_bar_label">Workout App</string>
    <string name="exercises_action_bar_label">Exercises</string>
    <string name="workouts_action_bar_label">Workouts</string>
    <string name="current_workout_action_bar_label">Current Workout</string>
    <string name="app_name">WorkoutApp</string>
    <string name="exercises_menu_item">Exercises</string>
    <string name="workouts_menu_item">Workouts</string>
    <string name="add_exercise_button">Add Exercise</string>
    <string name="add_workout_button">Add Workout</string>
</resources>