<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_exercise_item_in_workout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/exercise_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_exercise_in_workout_exercise_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_exercise_in_workout_exercise_label"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/add_exercise_in_workout_exercise_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sets_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_exercise_in_workout_sets_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_exercise_in_workout_sets_label"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/add_exercise_in_workout_sets_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/repeats_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_exercise_in_workout_repeats_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_exercise_in_workout_repeats_label"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/add_exercise_in_workout_repeats_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>